--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "openai": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-textarea-autosize": "^8.4.0",
     "typescript": "4.9.4"
   },
