--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-textarea-autosize": "^8.4.0",
+    "react-typist-component": "^1.0.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
