--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "lambda-rate-limiter": "^3.0.1",
+    "lodash.shuffle": "^4.2.0",
     "next": "13.1.1",
     "openai": "^3.1.0",
     "react": "18.2.0",
@@ -27,6 +29,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/lambda-rate-limiter": "^3.0.0",
+    "@types/lodash.shuffle": "^4.2.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
