--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@upstash/ratelimit": "^0.3.0-rc.1",
+    "@upstash/redis": "^1.19.3",
     "@vercel/analytics": "^0.1.8",
     "classnames": "^2.3.2",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
-    "lambda-rate-limiter": "^3.0.1",
     "leo-profanity": "^1.7.0",
     "lodash.shuffle": "^4.2.0",
     "next": "13.1.1",
@@ -33,7 +34,6 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
-    "@types/lambda-rate-limiter": "^3.0.0",
     "@types/leo-profanity": "^1.5.0",
     "@types/lodash.shuffle": "^4.2.7",
     "autoprefixer": "^10.4.13",
