--- a/package.json
+++ b/package.json
@@ -1,43 +1,89 @@
 {
-  "name": "ai-lol",
-  "version": "0.1.0",
+  "name": "punchlines-ai",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stripe:listen": "stripe listen --forward-to=localhost:3000/api/webhooks --project-name=punchlines",
+    "generate-types": "npx supabase gen types typescript --project-id YOUR_PROJECT_ID --schema public > types/db.ts"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "none",
+    "plugins": [
+      "@ianvs/prettier-plugin-sort-imports"
+    ],
+    "importOrder": [
+      "<THIRD_PARTY_MODULES>",
+      "^(@)(/.*)$",
+      "^[.]"
+    ]
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
-    "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@upstash/ratelimit": "^0.3.0-rc.1",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@stripe/stripe-js": "^1.54.0",
+    "@supabase/auth-helpers-nextjs": "^0.7.0",
+    "@supabase/auth-ui-react": "^0.4.2",
+    "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.24.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "@upstash/ratelimit": "^1.0.0",
     "@upstash/redis": "^1.19.3",
-    "@vercel/analytics": "^0.1.8",
+    "@vercel/analytics": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
+    "clsx": "^2.0.0",
     "leo-profanity": "^1.7.0",
     "lodash.shuffle": "^4.2.0",
-    "next": "13.1.1",
+    "lucide-react": "^0.303.0",
+    "next": "13.4.3",
+    "next-themes": "^0.2.1",
     "openai": "^4.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-merge-refs": "^2.0.2",
     "react-textarea-autosize": "^8.4.0",
     "react-typist-component": "^1.0.5",
-    "typescript": "4.9.4"
+    "sonner": "^1.3.1",
+    "stripe": "^12.7.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/leo-profanity": "^1.5.0",
     "@types/lodash.shuffle": "^4.2.7",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "@types/node": "^20.2.5",
+    "@types/react": "^18.2.7",
+    "@vercel/style-guide": "^5.1.0",
+    "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "13.4.3",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-tailwindcss": "^3.12.0",
+    "postcss": "^8.4.24",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "supabase": "^1.64.8",
+    "typescript": "^5.0.4"
   }
 }
